Save recipes to Dropbox

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Cookbox</string>
     <string name="search">Search</string>
+    <string name="keep">Keep</string>
 </resources>
