--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Cookbox</string>
     <string name="search">Search</string>
     <string name="keep">Keep</string>
+    <string name="settings">Settings</string>
 </resources>
