--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="search">Search</string>
     <string name="keep">Keep</string>
     <string name="settings">Settings</string>
+    <string name="share">Share</string>
 </resources>
